--- a/src/gnome/glade/account.glade
+++ b/src/gnome/glade/account.glade
@@ -513,14 +513,7 @@
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <widget class="GtkTreeView" id="parent_tree_view">
-			      <property name="visible">True</property>
-			      <property name="can_focus">True</property>
-			      <property name="headers_visible">True</property>
-			      <property name="rules_hint">False</property>
-			      <property name="reorderable">False</property>
-			      <property name="enable_search">True</property>
-			    </widget>
+			    <placeholder/>
 			  </child>
 			</widget>
 		      </child>
